--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,12 @@
 [custom]
 ;解决DNS泄露，无分流群组
+ruleset=DIRECT,[]DOMAIN-SUFFIX,linuxcool.com
+ruleset=DIRECT,[]DOMAIN-SUFFIX,nowcoder.com
+ruleset=DIRECT,[]DOMAIN-SUFFIX,zhipin.com
+ruleset=DIRECT,[]DOMAIN-SUFFIX,ketangpai.com
+ruleset=DIRECT,[]DOMAIN-SUFFIX,ovo.pink
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,speedtest.net
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,itiyu5.tv
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
