--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@ ruleset=DIRECT,[]DOMAIN-SUFFIX,nowcoder.com
 ruleset=DIRECT,[]DOMAIN-SUFFIX,zhipin.com
 ruleset=DIRECT,[]DOMAIN-SUFFIX,ketangpai.com
 ruleset=DIRECT,[]DOMAIN-SUFFIX,ovo.pink
+ruleset=DIRECT,[]DOMAIN-SUFFIX,scholat.com
 ruleset=DIRECT,[]DOMAIN-KEYWORD,xsus
 ruleset=🚀 节点选择,[]DOMAIN-KEYWORD,sockboom
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,speedtest.net
